applications/metube/metube-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metube
  labels:
    gateway-access/trusted-lan: "true"
