applications/metube/metube-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube
  namespace: metube
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: MeTube
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: metube.png
    gethomepage.dev/description: media downloader
spec:
  parentRefs:
    - name: trusted-lan
      namespace: openshift-ingress
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames:
    - metube.lan.igou.systems
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: metube
          port: 8081
          group: ""
          kind: Service
          weight: 1
